--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 applications:
 - name: pal-tracker
-  path: build/libs/pal-tracker.jar
-  random-route: true
+  path: build/libs/pal-tracker-jp.jar
+  routes:
+  - route: pal-tracker-jp-travis.cfapps.io
   env:
-    WELCOME_MESSAGE: Hello from Cloud Foundry
+    WELCOME_MESSAGE: Hello PAL-JP Cloud Foundry
