new release directory added

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
       deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
-        file: "build/libs/pal-tracker.jar"
+        file: "build/libs/pal-tracker-jp.jar"
         skip_cleanup: true
     - stage: deploy to review
       language: bash
