--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - name: pal-tracker
-  path: build/libs/pal-tracker.jar
+  path: build/libs/pal-tracker-jp.jar
   routes:
   - route: pal-tracker-jp-travis.cfapps.io
   env:
