updated release comment

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,4 +4,4 @@ applications:
   routes:
   - route: pal-tracker-jp-travis.cfapps.io
   env:
-    WELCOME_MESSAGE: Hello PAL-JP Cloud Foundry
+    WELCOME_MESSAGE: Hello from the review environment
